Changes made in Master branch

--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <div> I am on master branch</div>
 <!-- <div> I am on develop branch</div> -->
 <div> I am to merge data within Master branch</div>
+<div> I am on Master branch- Pooja</div>
